--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
   "devDependencies": {
     "@openzeppelin/contracts": "^4.4.2",
     "@truffle/hdwallet-provider": "^1.2.6",
-    "eth-gas-reporter": "^0.2.24",
-    "solidity-coverage": "^0.7.18",
-    "truffle": "^5.4.32",
     "bignumber.js": "^9.0.2",
+    "eth-gas-reporter": "^0.2.25",
     "ethereumjs-util": "^7.1.3",
     "rlp": "^2.2.6",
+    "solidity-coverage": "^0.7.18",
+    "truffle": "^5.4.32",
     "web3": "^1.3.4",
     "web3-utils": "^1.7.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
