--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "web3-utils": "^1.7.0"
   },
   "dependencies": {
+    "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "bn.js": "^5.2.1",
     "merkle-patricia-tree": "^4.2.4"
   }
